--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,36 @@
+---
+// stylesheet
+import "../styles/global.css";
+
+// components
+import BaseHead from "../components/global/BaseHead.astro";
+import Wrapper from "../components/global/Wrapper.astro";
+import NavBar from "../components/global/Navigation.astro";
+import Footer from "../components/global/Footer.astro";
+
+// assets
+import '@fontsource/road-rage';
+import '@fontsource-variable/jetbrains-mono';
+import bg from "../assets/images/bg.jpg";
+import { getImage } from "astro:assets";
+const backgroundImage = await getImage({src: bg, format:'jpg'})
+
+const { title } = Astro.props;
+---
+
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
+	<BaseHead pageTitle={title}/>
+	<body style=`background-image: url(${backgroundImage.src})` class="bg-cover bg-center bg-no-repeat bg-fixed  box-border">
+		<!-- Background noise effect -->
+		<div class="noise-[67,22,25] fixed inset-0 pointer-events-none"></div>
+		<!-- Wrapper component to make sure all content on the website is above the noise filter background -->
+		<Wrapper>
+			<NavBar />
+			<slot />
+			<Footer />
+		</Wrapper>
 	</body>
 </html>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
+
