--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,9 @@
 ---
-import Welcome from '../components/Welcome.astro';
+// layout
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Link from '../components/elements/Link.astro';
 ---
 
-<Layout>
-	<Welcome />
+<Layout title="Home">
+    <Link href='/styleguide' variant={'button'}>Style Guide</Link>
 </Layout>
