Complete pages and add contact page

--- a/src/components/sections/home/Hero.astro
+++ b/src/components/sections/home/Hero.astro
@@ -10,17 +10,15 @@ import Link from "../../elements/Link.astro"
 import peter from "../../../assets/images/peter.jpg";
 ---
 
-<Container variant={"w80"} class="h-dvh pt-28">
-    <Container variant={"w33"}>
-        <Text variant={'xl'}>Hey there! I specialize in crafting unique, eye-catching designs that help small businesses like yours stand out in a crowded market.</Text>
-    </Container>
-    <Container class="flex items-end gap-8 h-9/12">
-        <Container class="flex-2">
+<Container variant={"xl"} class="flex flex-col gap-8">
+    <Text variant={'xl'} class="text-base-900 lg:max-w-1/3 md:max-w-1/2 w-full">Hey there! I specialize in crafting unique, eye-catching designs that help small businesses like yours stand out in a crowded market.</Text>
+    <Container class="flex md:flex-row flex-col gap-8 md:h-9/12">
+        <Container class="md:flex-2 flex flex-col items-start gap-4">
             <Link variant={'button'} href="/contact">Available for work</Link>
             <Heading tagName="h1" tagSize="h1">Peter Jones</Heading>
         </Container>
-        <Container class="h-full flex-1">
-            <ImageContainer src={peter} alt="Peter Jones"></ImageContainer>
+        <Container class="h-full md:h-[500px] flex-1">
+            <ImageContainer src={peter} alt="Peter Jones" />
         </Container>
     </Container>
 </Container>
