--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,6 +31,17 @@
     --text-16: 1rem;
     --text-12: 0.75rem;
 
+    /* ANIMATIONS */
+    --animate-spin: spin 5s linear infinite;
+    @keyframes spin {
+        from {
+          transform: rotate(0deg);
+        }
+        to {
+          transform: rotate(360deg);
+        }
+    }
+
     /* BREAKPOINTS */
     --breakpoint-xsm: 320px;
     --breakpoint-sm: 480px;
