--- a/src/components/elements/Container.astro
+++ b/src/components/elements/Container.astro
@@ -2,21 +2,19 @@
 import type { HTMLAttributes } from "astro/types";
 
 interface Props extends HTMLAttributes<"div">{
-    variant?: "full" | "w80" | "w66" | "w50" | "w33" | "w25"
+    variant?: "full" | "xl" | "lg" | "md" 
 }
 
 const { variant = "full", class: className, ...rest} = Astro.props;
 
-const baseStyle = "w-full"
+const baseStyle = "w-full m-auto flex flex-col"
 
 // different width sizes for each container variant
 const variantStyle = {
     full: "",
-    w80: "xl:max-w-8/10 m-auto",
-    w66: "max-w-2/3 m-auto",
-    w50: "max-w-1/2",
-    w33: "max-w-1/3",
-    w25: "max-w-1/4"
+    xl: "xl:max-w-8/10 lg:gap-32 gap-20",
+    lg: "md:max-w-2/3 lg:gap-32 gap-20",
+    md: "lg:max-w-1/2 lg:gap-32 gap-20",
 }
 ---
 
