--- a/src/components/elements/ImageContainer.astro
+++ b/src/components/elements/ImageContainer.astro
@@ -1,11 +1,13 @@
 ---
+// assets 
 import { Image } from "astro:assets";
 import barCode from "../../assets/ui/barcode.svg";
+
 const {src, alt} = Astro.props;
 ---
-<div class="flex flex-col items-end gap-2 h-full">
-    <Image src={barCode} alt="Bar Code" />
-    <div class="p-4 border-2 border-base-900 h-full">
-        <Image src={src} alt={alt} class="w-full h-full object-cover grayscale-75"/>
+<div class="flex flex-col items-end gap-2 w-full h-full">
+    <Image src={barCode} alt="Bar Code" loading="eager"/>
+    <div class="p-4 border-2 border-base-900 w-full h-full">
+        <Image src={src} alt={alt} loading="eager" class="w-full h-full object-cover grayscale-75"/>
     </div>
 </div>
