--- a/src/components/elements/Text.astro
+++ b/src/components/elements/Text.astro
@@ -12,11 +12,11 @@ const baseStyle = "";
 
 // different font sizes and styling for each text variant
 const variantStyle = {
-    xsm: "text-12 font-mono text-base-900",
-    sm: "text-16 font-mono text-base-900",
+    xsm: "text-12 font-mono",
+    sm: "text-16/8 font-mono",
     md: "text-20 font-mono font-semibold uppercase text-base-700",
-    lg: "text-32 font-grunge text-base-900",
-    xl: "text-40/10 font-grunge text-base-900"
+    lg: "text-32/8 font-grunge",
+    xl: "text-40/10 font-grunge"
 }
 ---
 
