--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -1,22 +1,23 @@
 ---
+// components
 import Link from "../elements/Link.astro";
 
+// content
 const navLinks = [
     { title: "Home", href: "/" },
     { title: "Works", href: "/works" },
     { title: "About", href: "/about" },
-    { title: "Contact", href: "/contact" },
-    { title: "Blog", href: "/blog" }
+    { title: "Contact", href: "/contact" }
 ]
 ---
 
-<nav class="flex justify-end py-8 fixed top-0 right-6 left-0">
+<nav class="flex justify-end py-8 fixed top-0 right-6 left-0 z-50">
     <!-- Desktop Nav -->
     <ul class="hidden md:flex gap-8">
         {
-            navLinks.map((link) => (
+            navLinks.map((link, index) => (
                 <li>
-                    <Link href={link.href} variant={'nav'}>{link.title}</Link>
+                    <Link href={link.href} variant={'nav'}>{index + 1}. {link.title}</Link>
                 </li>
             ))
         }
@@ -24,12 +25,12 @@ const navLinks = [
     <!-- Mobile Nav -->
     <div class="md:hidden">
         <button id="open-nav">
-            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="#ffffff" d="m9.5 16.5l7-4.5l-7-4.5v9ZM12 22q-2.075 0-3.9-.788t-3.175-2.137q-1.35-1.35-2.137-3.175T2 12q0-2.075.788-3.9t2.137-3.175q1.35-1.35 3.175-2.137T12 2q2.075 0 3.9.788t3.175 2.137q1.35 1.35 2.138 3.175T22 12q0 2.075-.788 3.9t-2.137 3.175q-1.35 1.35-3.175 2.138T12 22Zm0-2q3.35 0 5.675-2.325T20 12q0-3.35-2.325-5.675T12 4Q8.65 4 6.325 6.325T4 12q0 3.35 2.325 5.675T12 20Zm0-8Z"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="#ffffff" d="m9.5 16.5l7-4.5l-7-4.5v9ZM12 22q-2.075 0-3.9-.788t-3.175-2.137q-1.35-1.35-2.137-3.175T2 12q0-2.075.788-3.9t2.137-3.175q1.35-1.35 3.175-2.137T12 2q2.075 0 3.9.788t3.175 2.137q1.35 1.35 2.138 3.175T22 12q0 2.075-.788 3.9t-2.137 3.175q-1.35 1.35-3.175 2.138T12 22Zm0-2q3.35 0 5.675-2.325T20 12q0-3.35-2.325-5.675T12 4Q8.65 4 6.325 6.325T4 12q0 3.35 2.325 5.675T12 20Zm0-8Z"/></svg>
         </button>
         <div class="hidden fixed inset-0 bg-base-100 z-50" id="mobile-nav">
             <div class="flex flex-col items-center justify-center h-full">
                 <button id="close-nav" class="absolute top-6 right-6 text-white">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="#ffffff" d="M9 16h2V8H9v8Zm4 0h2V8h-2v8Zm-1 6q-2.075 0-3.9-.788t-3.175-2.137q-1.35-1.35-2.137-3.175T2 12q0-2.075.788-3.9t2.137-3.175q1.35-1.35 3.175-2.137T12 2q2.075 0 3.9.788t3.175 2.137q1.35 1.35 2.138 3.175T22 12q0 2.075-.788 3.9t-2.137 3.175q-1.35 1.35-3.175 2.138T12 22Zm0-2q3.35 0 5.675-2.325T20 12q0-3.35-2.325-5.675T12 4Q8.65 4 6.325 6.325T4 12q0 3.35 2.325 5.675T12 20Zm0-8Z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="#ffffff" d="M9 16h2V8H9v8Zm4 0h2V8h-2v8Zm-1 6q-2.075 0-3.9-.788t-3.175-2.137q-1.35-1.35-2.137-3.175T2 12q0-2.075.788-3.9t2.137-3.175q1.35-1.35 3.175-2.137T12 2q2.075 0 3.9.788t3.175 2.137q1.35 1.35 2.138 3.175T22 12q0 2.075-.788 3.9t-2.137 3.175q-1.35 1.35-3.175 2.138T12 22Zm0-2q3.35 0 5.675-2.325T20 12q0-3.35-2.325-5.675T12 4Q8.65 4 6.325 6.325T4 12q0 3.35 2.325 5.675T12 20Zm0-8Z"/></svg>
                 </button>
                 <ul class="flex flex-col p-6 gap-5 md:hidden text-center">
                     {
