--- a/src/components/global/Wrapper.astro
+++ b/src/components/global/Wrapper.astro
@@ -1,3 +1,3 @@
-<div class="relative z-20 px-6 md:px-8 flex flex-col xl:gap-48 lg:gap-40 md:gap-28 sm:gap-20 xsm:gap-16">
+<div class="relative z-20 px-8 md:pt-28 pt-22 md:px-8 flex flex-col xl:gap-48 lg:gap-40 gap-28">
     <slot />
 </div>
