--- a/src/components/sections/works/Works.astro
+++ b/src/components/sections/works/Works.astro
@@ -1,22 +1,16 @@
 ---
 // components
 import Container from "../../elements/Container.astro";
-import Heading from "../../elements/Heading.astro";
 import Work from "../../items/Work.astro";
-import Link from "../../elements/Link.astro";
 
 // content collections
 import { getCollection } from "astro:content";
 const works = await getCollection("works");
-const featuredWorks = works.filter(work => work.data.isFeatured === true);
 ---
 
-<Container variant={'lg'} class="items-center">
-    <Heading tagName="h2" tagSize="h2" class="text-center">
-        Featured Works
-    </Heading>
-    <Container class="grid md:grid-cols-2 grid-cols-1 gap-16">
-        {featuredWorks.map((work) => (
+<Container variant={'lg'}>
+    <Container class="grid md:grid-cols-2 grid-cols-1 gap-24">
+        {works.map((work) => (
             <Work 
                 slug={work.data.slug}
                 featuredImage={work.data.featuredImage}
@@ -27,5 +21,4 @@ const featuredWorks = works.filter(work => work.data.isFeatured === true);
         ))
         }
     </Container>
-    <Link variant={'button'} href="/works">All Works</Link>
 </Container>
