--- a/src/components/sections/works/Works.astro
+++ b/src/components/sections/works/Works.astro
@@ -9,7 +9,7 @@ const works = await getCollection("works");
 ---
 
 <Container variant={'lg'}>
-    <Container class="grid md:grid-cols-2 grid-cols-1 gap-24">
+    <Container class="grid lg:grid-cols-2 grid-cols-1 gap-24">
         {works.map((work) => (
             <Work 
                 slug={work.data.slug}
