--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,8 +4,10 @@ import Layout from "../layouts/Layout.astro"
 
 // components
 import Intro from "../components/sections/contact/Intro.astro"
+import ContactDetails from "../components/sections/contact/ContactDetails.astro"
 ---
 
 <Layout title="Contact">
     <Intro />
+    <ContactDetails />
 </Layout>
