--- a/src/pages/works/[page].astro
+++ b/src/pages/works/[page].astro
@@ -28,7 +28,7 @@ export const getStaticPaths = (async () => {
     }));
 }) satisfies GetStaticPaths;
 
-
+// props
 const { work } = Astro.props;
 const { Content } = await render(work);
 const { title, client, category, services, year, description, featuredImage, imageTwo, imageThree, imageFour, liveSite } = work.data;
@@ -68,11 +68,12 @@ const details = [
                 <ImageContainer src={imageThree} alt={title} />
             </div>
         </div>
-        <div class="markdown-content md:max-w-3xl flex flex-col gap-4">
+        <article class="markdown-content md:max-w-3xl flex flex-col gap-4">
             <Content />
-        </div>
+        </article>
         <div class="w-full md:h-[600px] h-[300px]">
             <ImageContainer src={imageFour} alt={title} />
         </div>
+        <Link variant={'button'} href="/works">All Works</Link>
     </Container>
 </Layout>
