--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -21,7 +21,7 @@ const navigation = [
 ]
 ---
 
-<Container variant={'xl'} class="pb-8">
+<Container variant={'xl'} class="mt-32 pb-8">
     <div class="flex flex-col gap-10 md:flex-row">
         <div class="flex-1 md:text-left text-center">
             <Heading tagName="h3" tagSize="h4" class="text-base-900 mb-5">Socials</Heading>
