--- a/src/components/sections/home/About.astro
+++ b/src/components/sections/home/About.astro
@@ -17,7 +17,7 @@ import peter2 from "../../../assets/images/peter2.jpg";
             <Text variant={'xl'}>I'm a creative problem-solver who thrives at the intersection of design, strategy, and human behavior.</Text>
             <Text variant={'sm'}>With a passion for crafting intuitive and delightful experiences, I help brands and startups translate complex challenges into elegant solutions that create meaningful impact.</Text>
             <Text variant={'sm'}>When I'm not designing, you'll find me exploring coffee shops, experimenting with film photography, or diving into design books. I believe the best design comes from understanding people.</Text>
-            <Link variant={'button'} href="/about">Learn more</Link>
+            <Link variant={'button'} href="/about">More about me</Link>
         </div>
         <div class="w-full lg:h-[500px] h-auto lg:flex-1">
             <ImageContainer src={peter2} alt="Peter Jones" />
