--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,7 +27,7 @@ const { title } = Astro.props;
 		<!-- Wrapper component to make sure all content on the website is above the noise filter background -->
 		<Wrapper>
 			<NavBar />
-			<main>
+			<main class="flex flex-col xl:gap-48 lg:gap-40 gap-28">
 				<slot />
 			</main>
 			<Footer />
