--- a/src/pages/works/[...page].astro
+++ b/src/pages/works/[...page].astro
@@ -20,7 +20,7 @@ export const getStaticPaths = (async ({paginate}) => {
 const { page } = Astro.props;
 ---
 
-<Layout title=`Works - Page ${page.currentPage}`>
+<Layout title=`Mis gustos - Page ${page.currentPage}`>
     <Heading tagName="h1" tagSize="h1" class="text-center">Works</Heading>
     <Container variant={'lg'}>
         <Container class="grid lg:grid-cols-2 grid-cols-1 gap-24">
