--- a/src/pages/works/[...page].astro
+++ b/src/pages/works/[...page].astro
@@ -21,7 +21,7 @@ const { page } = Astro.props;
 ---
 
 <Layout title=`Mis gustos - Page ${page.currentPage}`>
-    <Heading tagName="h1" tagSize="h1" class="text-center">Works</Heading>
+    <Heading tagName="h1" tagSize="h1" class="text-center">Mis gustos</Heading>
     <Container variant={'lg'}>
         <Container class="grid lg:grid-cols-2 grid-cols-1 gap-24">
             {page.data.map((work) => (
