Update 404 page link text to Spanish

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -16,6 +16,6 @@ import Link from "../components/elements/Link.astro";
             <Text variant={'xl'} class="text-base-900">Oops! It seems the page you are trying to access is broken or does not exist!</Text>    
         </div>
         
-        <Link variant={'button'} href="/">Go back to the homepage</Link>
+        <Link variant={'button'} href="/">Vuelve a la pagina principal</Link>
     </Container>
 </Layout>
