Change layout title from 'Home' to 'Principal'

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import About from '../components/sections/home/About.astro';
 import Faq from '../components/sections/home/Faq.astro';
 ---
 
-<Layout title="Home">
+<Layout title="Principal">
     <Hero />
     <SelectedWorks />
     <Services />
