Change page title from 'About' to 'Sobre mi'

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,7 +8,7 @@ import Experience from "../components/sections/about/Experience.astro";
 import Education from "../components/sections/about/Education.astro";
 ---
 
-<Layout title="About">
+<Layout title="Sobre mi">
     <Intro />
     <Experience />
     <Education />
