--- a/src/components/sections/home/Hero.astro
+++ b/src/components/sections/home/Hero.astro
@@ -11,14 +11,14 @@ import peter from "../../../assets/images/peter.jpg";
 ---
 
 <Container variant={"xl"} class="flex flex-col gap-8 min-h-screen">
-    <Text variant={'xl'} class="text-base-900 lg:max-w-1/3 md:max-w-1/2 w-full">Hey there! I specialize in crafting unique, eye-catching designs that help small businesses like yours stand out in a crowded market.</Text>
+    <Text variant={'xl'} class="text-base-900 lg:max-w-1/3 md:max-w-1/2 w-full">Hola! Soy Ingeniera de Sistemas apasionada por el diseño y desarrollo de interfaces gráficas.
+Me caracterizo por aprender rápido y asumir cualquier tarea con responsabilidad, creatividad y ganas de superarme.</Text>
     <Container class="flex md:flex-row flex-col gap-8">
         <Container class="md:flex-2 flex flex-col items-start gap-4">
-            <Link variant={'button'} href="/contact">Available for work</Link>
-            <Heading tagName="h1" tagSize="h1">Peter Jones</Heading>
+            <Heading tagName="h1" tagSize="h1">Lina Sofia Patiño☆</Heading>
         </Container>
         <Container class="h-full md:h-[500px] flex-1">
-            <ImageContainer src={peter} alt="Peter Jones" />
+            <ImageContainer src={peter} alt="Lina Sofia Patiño" />
         </Container>
     </Container>
 </Container>
