--- a/src/components/sections/home/Hero.astro
+++ b/src/components/sections/home/Hero.astro
@@ -18,7 +18,7 @@ Me caracterizo por aprender rápido y asumir cualquier tarea con responsabilidad
             <Heading tagName="h1" tagSize="h1">Lina Sofia Patiño☆</Heading>
         </Container>
         <Container class="h-full md:h-[500px] flex-1">
-            <ImageContainer src={peter} alt="Lina Sofia Patiño" />
+            <ImageContainer src={lina} alt="Lina Sofia Patiño" />
         </Container>
     </Container>
 </Container>
