--- a/src/components/sections/home/Hero.astro
+++ b/src/components/sections/home/Hero.astro
@@ -7,7 +7,7 @@ import ImageContainer from "../../elements/ImageContainer.astro"
 import Link from "../../elements/Link.astro"
 
 // assets
-import peter from "../../../assets/images/peter.jpg";
+import lina from "../../../assets/images/lina.jepg";
 ---
 
 <Container variant={"xl"} class="flex flex-col gap-8 min-h-screen">
