--- a/src/components/sections/home/Hero.astro
+++ b/src/components/sections/home/Hero.astro
@@ -7,7 +7,7 @@ import ImageContainer from "../../elements/ImageContainer.astro"
 import Link from "../../elements/Link.astro"
 
 // assets
-import lina from "../../../assets/images/lina.jepg";
+import linaa from "../../../assets/images/linaa.jpg";
 ---
 
 <Container variant={"xl"} class="flex flex-col gap-8 min-h-screen">
@@ -18,7 +18,7 @@ Me caracterizo por aprender rápido y asumir cualquier tarea con responsabilidad
             <Heading tagName="h1" tagSize="h1">Lina Sofia Patiño☆</Heading>
         </Container>
         <Container class="h-full md:h-[500px] flex-1">
-            <ImageContainer src={lina} alt="Lina Sofia Patiño" />
+            <ImageContainer src={linaa} alt="Lina Sofia Patiño" />
         </Container>
     </Container>
 </Container>
