--- a/src/components/sections/home/Hero.astro
+++ b/src/components/sections/home/Hero.astro
@@ -7,7 +7,7 @@ import ImageContainer from "../../elements/ImageContainer.astro"
 import Link from "../../elements/Link.astro"
 
 // assets
-import lina2 from "../../../assets/images/lina2.jpeg";
+import lina2 from "../../../assets/images/lina2.jpg";
 ---
 
 <Container variant={"xl"} class="flex flex-col gap-8 min-h-screen">
@@ -18,9 +18,7 @@ Me caracterizo por aprender rápido y asumir cualquier tarea con responsabilidad
             <Heading tagName="h1" tagSize="h1">Lina Sofia Patiño☆</Heading>
         </Container>
         <Container class="h-full md:h-[500px] flex-1">
-=======
-          <ImageContainer src="/images/lina2.jpeg" alt="Lina Sofia Patiño" />
->>>>>>> 7475e55777613be03a374a508fa5f4cd1a789a09
+          <ImageContainer src="/images/lina2.jpg" alt="Lina Sofia Patiño" />
         </Container>
     </Container>
 </Container>
