--- a/src/components/sections/home/SelectedWorks.astro
+++ b/src/components/sections/home/SelectedWorks.astro
@@ -13,7 +13,7 @@ const featuredWorks = works.filter(work => work.data.isFeatured === true);
 
 <Container variant={'lg'} class="items-center">
     <Heading tagName="h2" tagSize="h2" class="text-center">
-        Featured Works
+        Mis Gustos
     </Heading>
     <Container class="grid lg:grid-cols-2 grid-cols-1 gap-16">
         {featuredWorks.map((work) => (
