--- a/src/components/sections/home/SelectedWorks.astro
+++ b/src/components/sections/home/SelectedWorks.astro
@@ -27,5 +27,5 @@ const featuredWorks = works.filter(work => work.data.isFeatured === true);
         ))
         }
     </Container>
-    <Link variant={'button'} href="/works">All Works</Link>
+    <Link variant={'button'} href="/works">Mas gustos</Link>
 </Container>
