--- a/src/components/sections/home/About.astro
+++ b/src/components/sections/home/About.astro
@@ -11,13 +11,18 @@ import peter2 from "../../../assets/images/peter2.jpg";
 ---
 
 <Container variant={'xl'}>
-    <Heading tagName="h2" tagSize="h2" class="text-center">About</Heading>
+    <Heading tagName="h2" tagSize="h2" class="text-center">Sobre mi</Heading>
     <div class="flex lg:flex-row lg:gap-16 gap-10 flex-col">
         <div class="flex flex-col items-start gap-6 lg:pt-6 text-base-900 lg:flex-1">
-            <Text variant={'xl'}>I'm a creative problem-solver who thrives at the intersection of design, strategy, and human behavior.</Text>
-            <Text variant={'sm'}>With a passion for crafting intuitive and delightful experiences, I help brands and startups translate complex challenges into elegant solutions that create meaningful impact.</Text>
-            <Text variant={'sm'}>When I'm not designing, you'll find me exploring coffee shops, experimenting with film photography, or diving into design books. I believe the best design comes from understanding people.</Text>
-            <Link variant={'button'} href="/about">More about me</Link>
+            <Text variant={'xl'}>
+Soy estudiante de Ingeniería de Sistemas, me enfoco mas en la creacion de interfaces gráficas modernas y funcionales.
+</Text>
+
+<Text variant={'sm'}>
+Me gustan mucho las manualidades, la creatividad, el diseño, y la creacion de interfaces.
+</Text>
+
+            <Link variant={'button'} href="/about">Mas sobre mi❁</Link>
         </div>
         <div class="w-full lg:h-[500px] h-auto lg:flex-1">
             <ImageContainer src={peter2} alt="Peter Jones" />
