--- a/src/components/sections/home/About.astro
+++ b/src/components/sections/home/About.astro
@@ -7,7 +7,7 @@ import Link from "../../elements/Link.astro";
 import ImageContainer from "../../elements/ImageContainer.astro";
 
 // assets
-import peter2 from "../../../assets/images/peter2.jpg";
+import lini from "../../../assets/images/lini.jpg";
 ---
 
 <Container variant={'xl'}>
@@ -22,10 +22,10 @@ Soy estudiante de Ingeniería de Sistemas, me enfoco mas en la creacion de inter
 Me gustan mucho las manualidades, la creatividad, el diseño, y la creacion de interfaces.
 </Text>
 
-            <Link variant={'button'} href="/about">Mas sobre mi❁</Link>
+            <Link variant={'button'} href="/about">Mas sobre mi❤️</Link>
         </div>
         <div class="w-full lg:h-[500px] h-auto lg:flex-1">
-            <ImageContainer src={peter2} alt="Peter Jones" />
+            <ImageContainer src={lini} alt="Lina Patiño" />
         </div>
     </div>
 </Container>
