--- a/src/components/sections/home/About.astro
+++ b/src/components/sections/home/About.astro
@@ -25,7 +25,7 @@ Me gustan mucho las manualidades, la creatividad, el diseño, y la creacion de i
             <Link variant={'button'} href="/about">Mas sobre mi❤️</Link>
         </div>
         <div class="w-full lg:h-[500px] h-auto lg:flex-1">
-            <ImageContainer src={lini} alt="Lina Patiño" />
+            <ImageContainer src="/images/lini.jpg" alt="Lina Patiño" />
         </div>
     </div>
 </Container>
