--- a/src/components/sections/home/Hero.astro
+++ b/src/components/sections/home/Hero.astro
@@ -11,8 +11,8 @@ import lina2 from "../../../assets/images/lina2.jpg";
 ---
 
 <Container variant={"xl"} class="flex flex-col gap-8 min-h-screen">
-    <Text variant={'xl'} class="text-base-900 lg:max-w-1/3 md:max-w-1/2 w-full">Hola! Soy Ingeniera de Sistemas apasionada por el diseño y desarrollo de interfaces gráficas.
-Me caracterizo por aprender rápido y asumir cualquier tarea con responsabilidad, creatividad y ganas de superarme.</Text>
+    <Text variant={'xl'} class="text-base-900 lg:max-w-1/3 md:max-w-1/2 w-full">Hola! Soy estudiante de Ingeniera de Sistemas apasionada por el diseño y desarrollo de interfaces gráficas.
+Aprendo rápido y puedo asumir cualquier tarea con responsabilidad, creatividad y ganas de hacer lo mejor.</Text>
     <Container class="flex md:flex-row flex-col gap-8">
         <Container class="md:flex-2 flex flex-col items-start gap-4">
             <Heading tagName="h1" tagSize="h1">Lina Sofia Patiño☆</Heading>
