--- a/src/components/sections/contact/Intro.astro
+++ b/src/components/sections/contact/Intro.astro
@@ -6,10 +6,10 @@ import Text from "../../elements/Text.astro";
 ---
 
 <Container variant={'xl'} class="text-center text-base-900 flex flex-col items-center">
-    <Heading tagName="h1" tagSize="h1">Contact</Heading>
+    <Heading tagName="h1" tagSize="h1">Presentacion</Heading>
     <div class="max-w-3xl flex flex-col gap-4">
         <Text variant={'xl'}>Let's Create Something Amazing Together!</Text>
         <Text variant={'sm'}>Ready to bring your vision to life? I'd love to hear about your project and explore how we can work together to create meaningful design solutions that drive results.</Text>
-        <Text variant={'sm'}>Currently accepting new projects for Q3 2025. Response time: 24-48 hours.</Text>
+        <Text variant={'sm'}>Currently acceptig new projects for Q3 2025. Response time: 24-48 hours.</Text>
     </div>
 </Container>
