--- a/src/components/sections/home/About.astro
+++ b/src/components/sections/home/About.astro
@@ -5,29 +5,32 @@ import Text from "../../elements/Text.astro";
 import Container from "../../elements/Container.astro";
 import Link from "../../elements/Link.astro";
 import ImageContainer from "../../elements/ImageContainer.astro";
-
-// assets
-
----
-import lini from "../../../assets/images/lini.jpg";
 ---
 
 <Container variant={'xl'}>
     <Heading tagName="h2" tagSize="h2" class="text-center">Sobre mi</Heading>
+
     <div class="flex lg:flex-row lg:gap-16 gap-10 flex-col">
+
         <div class="flex flex-col items-start gap-6 lg:pt-6 text-base-900 lg:flex-1">
+
             <Text variant={'xl'}>
-Soy estudiante de Ingeniería de Sistemas, me enfoco mas en la creacion de interfaces gráficas modernas y funcionales.
-</Text>
+                Soy estudiante de Ingeniería de Sistemas, me enfoco más en la creación de interfaces gráficas modernas y funcionales.
+            </Text>
 
-<Text variant={'sm'}>
-Me gustan mucho las manualidades, la creatividad, el diseño, y la creacion de interfaces.
-</Text>
+            <Text variant={'sm'}>
+                Me gustan mucho las manualidades, la creatividad, el diseño y la creación de interfaces.
+            </Text>
 
-            <Link variant={'button'} href="/about">Mas sobre mi❤️</Link>
+            <Link variant={'button'} href="/about">
+                Más sobre mí ❤️
+            </Link>
+
         </div>
+
         <div class="w-full lg:h-[500px] h-auto lg:flex-1">
             <ImageContainer src="/images/lini.jpg" alt="Lina Patiño" />
         </div>
+
     </div>
 </Container>
