--- a/src/components/sections/about/Intro.astro
+++ b/src/components/sections/about/Intro.astro
@@ -17,7 +17,7 @@ import lini from "../../../assets/images/lini.jpg";
             <Text variant={'sm'} class="text-base-900">For the past 8 years, I've been helping startups and established companies solve complex challenges through design. I believe great design isn't just about making things look beautiful—it's about understanding people, solving problems, and creating meaningful connections between brands and their customers.</Text>
         </div>
         <div class="flex-1 md:h-[500px] w-full">
-            <ImageContainer src={lini} alt="Lina"/>
+          <ImageContainer src={lini} alt="Lina Patiño" />
         </div>
     </div>
 </Container>
