--- a/src/components/sections/home/About.astro
+++ b/src/components/sections/home/About.astro
@@ -29,7 +29,7 @@ import ImageContainer from "../../elements/ImageContainer.astro";
         </div>
 
         <div class="w-full lg:h-[500px] h-auto lg:flex-1">
-            <ImageContainer src="/images/lini.jpg" alt="Lina Patiño" />
+          <ImageContainer src={lini} alt="Lina Patiño" />
         </div>
 
     </div>
