--- a/src/components/sections/home/About.astro
+++ b/src/components/sections/home/About.astro
@@ -6,6 +6,8 @@ import Container from "../../elements/Container.astro";
 import Link from "../../elements/Link.astro";
 import ImageContainer from "../../elements/ImageContainer.astro";
 ---
+import lini from "../../../assets/images/lini.jpg";
+---
 
 <Container variant={'xl'}>
     <Heading tagName="h2" tagSize="h2" class="text-center">Sobre mi</Heading>
