quite service y puse contact

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,13 +5,13 @@ import Layout from '../layouts/Layout.astro';
 // components
 import Hero from '../components/sections/home/Hero.astro';
 import SelectedWorks from '../components/sections/home/SelectedWorks.astro';
-import Services from '../components/sections/home/Services.astro';
 import About from '../components/sections/home/About.astro';
+import Contact from '../components/sections/Contact.astro';
 ---
 
 <Layout title="Principal">
     <Hero />
+     <About />
+    <Contact />
     <SelectedWorks />
-    <About />
-    <Services />
 </Layout>
