--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,12 +6,12 @@ import Layout from '../layouts/Layout.astro';
 import Hero from '../components/sections/home/Hero.astro';
 import SelectedWorks from '../components/sections/home/SelectedWorks.astro';
 import About from '../components/sections/home/About.astro';
-import Contact from '../components/sections/contact/intro.astro';
+import Intro from '../components/sections/contact/Intro.astro';
 ---
 
 <Layout title="Principal">
     <Hero />
     <About />
-    <Contact />
+    <Intro />
     <SelectedWorks />
 </Layout>
