--- a/src/components/sections/about/Intro.astro
+++ b/src/components/sections/about/Intro.astro
@@ -13,8 +13,8 @@ import lini from "../../../assets/images/lini.jpg";
     <Heading tagName="h1" tagSize="h1" class="text-center">Sobre Mi★</Heading>
     <div class="flex md:flex-row flex-col gap-16 md:items-center">
         <div class="flex-1 flex flex-col gap-7">
-            <Text variant={'xl'} class="text-base-900">I'm a creative designer passionate about crafting experiences that connect brands with their audiences through thoughtful design and strategic thinking.</Text>
-            <Text variant={'sm'} class="text-base-900">For the past 8 years, I've been helping startups and established companies solve complex challenges through design. I believe great design isn't just about making things look beautiful—it's about understanding people, solving problems, and creating meaningful connections between brands and their customers.</Text>
+            <Text variant={'xl'} class="text-base-900">Soy una estudiante de ingenieria de cuarto semestre, tengo 19 años y vivo en Bogota, Colombia.</Text>
+            <Text variant={'sm'} class="text-base-900">Soy una persona muy expresiva y comunicativa, me gusta mucho socializar y conocer gente nueva, me encanta estar con mi familia y estar rodeada de mis seres queridos, si algo me gusta pongo todo mi empeño y esfuerzo, soy trabajadora y nunca me rindo.</Text>
         </div>
         <div class="flex-1 md:h-[500px] w-full">
           <ImageContainer src={lini} alt="Lina Patiño" />
