mas sobre mi mas

--- a/src/components/sections/about/Intro.astro
+++ b/src/components/sections/about/Intro.astro
@@ -14,7 +14,10 @@ import lini from "../../../assets/images/lini.jpg";
     <div class="flex md:flex-row flex-col gap-16 md:items-center">
         <div class="flex-1 flex flex-col gap-7">
             <Text variant={'xl'} class="text-base-900">Soy una estudiante de ingenieria de cuarto semestre, tengo 19 años y vivo en Bogota, Colombia.</Text>
-            <Text variant={'sm'} class="text-base-900">Soy una persona muy expresiva y comunicativa, me gusta mucho socializar y conocer gente nueva, me encanta estar con mi familia y estar rodeada de mis seres queridos, si algo me gusta pongo todo mi empeño y esfuerzo, soy trabajadora y nunca me rindo.</Text>
+            <Text variant={'sm'} class="text-base-900">Soy una persona muy expresiva y comunicativa, me gusta mucho socializar y conocer gente nueva, me encanta estar con mi familia y estar rodeada de mis seres queridos, si algo me gusta pongo todo mi empeño y esfuerzo, soy trabajadora y nunca me rindo.
+            
+            Me conocen por ser muy energetica y risueña, me gusta mucho aprender sobre temas varios aunque no tengan que ver con mi carrera, casi siempre me enfoco en el diseño y manejo creativo de los proyectos, la interaccion con los usuarios y la facilitacion de estos. Siempre estoy dispuesta a ayudar con lo que me pidan y cada dia aspiro a mejorar!
+            </Text>
         </div>
         <div class="flex-1 md:h-[500px] w-full">
           <ImageContainer src={lini} alt="Lina Patiño" />
