--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -14,10 +14,10 @@ const socials = [
 ];
 
 const navigation = [
-    { title: "Home", href: "/" },
-    { title: "Works", href: "/works" },
-    { title: "About", href: "/about" },
-    { title: "Contact", href: "/contact" }
+    { title: "Principal", href: "/" },
+    { title: "Mis Gustos", href: "/works" },
+    { title: "Sobre Mi 💖", href: "/about" },
+    { title: "Presentación", href: "/contact" }
 ]
 ---
 
