--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -7,10 +7,7 @@ import Link from "../elements/Link.astro";
 
 // links
 const socials = [
-    { title: "Linkedin", href: "https://linkedin.com" },
-    { title: "Instagram", href: "https://instagram.com" },
-    { title: "Twiter", href: "https://twitter.com" },
-    { title: "Github", href: "https://github.com" }
+    { title: "Github", href: "https://github.com/linasof" }
 ];
 
 const navigation = [
