--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -4,10 +4,10 @@ import Link from "../elements/Link.astro";
 
 // links
 const navLinks = [
-    { title: "Home", href: "/" },
-    { title: "Works", href: "/works" },
-    { title: "About", href: "/about" },
-    { title: "Contact", href: "/contact" }
+    { title: "Principal", href: "/" },
+    { title: "Mis Gustos", href: "/works" },
+    { title: "Sobre Mi 💖", href: "/about" },
+    { title: "Presentación", href: "/contact" }
 ]
 ---
 
